<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout_Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_register"
        style="@style/Button_Transparent"
        android:layout_gravity="end"
        android:text="@string/register" />

    <LinearLayout
        style="@style/Cell_Top"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="@dimen/icon_length"
            android:layout_height="@dimen/icon_length"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_mobile_phone" />

        <EditText
            android:id="@+id/edt_mobile_phone"
            style="@style/EditText_Base"
            android:hint="手机号"
            android:inputType="phone"
            android:maxLength="@integer/phone_length" />
    </LinearLayout>

    <LinearLayout style="@style/Cell_Bottom">

        <ImageView
            android:layout_width="@dimen/icon_length"
            android:layout_height="@dimen/icon_length"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/edt_16"
            style="@style/EditText_Base"
            android:hint="密码"
            android:maxLength="@integer/pwd_length" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/ckb_remember_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_username" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Button_Orange"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_forget16"
        style="@style/Button_Transparent"
        android:layout_gravity="end"
        android:text="@string/forget_password" />
</LinearLayout>