<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_toolbar"
    android:background="@color/orange">

    <LinearLayout
        android:id="@+id/toolbar_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back"
            android:src="@drawable/icon_arrow_left" />

        <TextView
            style="@style/Button_Toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/orange" />
    </LinearLayout>

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_toolbar_title" />

    <Button
        android:id="@+id/toolbar_right_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="#00000000"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/selector_button_toolbar"
        android:textSize="14sp" />
</RelativeLayout>