<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout_Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_gathering" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculator_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light"
            android:gravity="right|center_vertical"
            android:paddingTop="30dp"
            android:singleLine="true"
            android:text="0.00"
            android:textSize="48sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/calculator_1"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="1" />

                <Button
                    android:id="@+id/calculator_2"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="2" />

                <Button
                    android:id="@+id/calculator_3"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="3" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/calculator_4"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="4" />

                <Button
                    android:id="@+id/calculator_5"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="5" />

                <Button
                    android:id="@+id/calculator_6"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="6" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/calculator_7"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="7" />

                <Button
                    android:id="@+id/calculator_8"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="8" />

                <Button
                    android:id="@+id/calculator_9"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="9" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/calculator_c"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="c" />

                <Button
                    android:id="@+id/calculator_0"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0" />

                <ImageButton
                    android:id="@+id/calculator_back"
                    style="@style/Button_Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_delete" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_swiping_card"
            style="@style/Button_Orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/swiping_card" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_query_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_calculator"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="@dimen/icon_length"
                    android:layout_height="@dimen/icon_length"
                    android:contentDescription="@string/query_balance"
                    android:src="@drawable/query_balance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/query_balance"
                    android:textColor="@color/gray_text" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray_line" />

            <LinearLayout
                android:id="@+id/ll_device_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_calculator"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="@dimen/icon_length"
                    android:layout_height="@dimen/icon_length"
                    android:contentDescription="@string/device_settings"
                    android:src="@drawable/device_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/device_settings"
                    android:textColor="@color/gray_text" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/v_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88000000" />
    </LinearLayout>
</RelativeLayout>